fixed small spacing issue cal

--- a/tigerapps/static/cal/css/menu.css
+++ b/tigerapps/static/cal/css/menu.css
@@ -66,7 +66,7 @@ div#menu li div {
     list-style: none;
     float: right;
     position: absolute;
-    top: 24px;
+    top: 26px;
     right: 0px;
     /*width: 208px;*/
     z-index: 11;
